--- a/client/src/components/Auth/_Login.scss
+++ b/client/src/components/Auth/_Login.scss
@@ -1,4 +1,5 @@
 @import "../../styles/settings/settings-colors";
+@import "../../styles/settings/_settings-breakpoints";
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -13,9 +14,9 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        width: 90%;        
+        width: 90%;
         height: auto;
-        margin: 0 auto;      
+        margin: 0 auto;
         z-index: 2;
     }
     &::before {
@@ -31,5 +32,20 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+    }
+    .info-message {
+        padding-top: 50px; 
+        color: map-get($colors, bordeaux);
+        z-index: 3;
+      p, a{
+          font-size: 10px;
+          @include desktop {          
+            font-size: 14px;
+        }
+        a{
+            color: map-get($colors, secondary);
+            padding-left: 5px;     
+        }
+      }
     }
 }
