--- a/client/src/components/Auth/_Profile.scss
+++ b/client/src/components/Auth/_Profile.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-
+    min-height: 50vh;
     &__info {
         display: flex;
         width: 90%;
