--- a/client/src/components/Cooks/Cook/_Cook.scss
+++ b/client/src/components/Cooks/Cook/_Cook.scss
@@ -5,13 +5,14 @@
 .cook-card {
     background-color:map-get($colors, primary-100) ;
     display: grid;
-    grid-template-columns: 60% 40%;  
+    grid-template-columns: 41% 25%;  
     align-items: center;
     border: 2px solid map-get($colors, secondary-300);
     border-radius: 5px;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    box-shadow: $secondary-shadow;
+    width: 280px;
     height: 100px;
+    justify-content: space-around;
     &:hover {
         border: 2px solid map-get($colors, yellow-100);
     }
@@ -19,19 +20,16 @@
     p {
         color: map-get($colors, secondary-200);
     }
-
-    &__info {
-        display: flex;
-        padding-left: 15px;
-    }
-    &__recipes {
-    }
+    
     .icon {
-        width: 80px;
-        height: 50px;
+        height: 64px;
+        display: flex;
+        flex-direction: column;
+        align-content: space-between;
+        justify-content: space-between;
         img {
             width: 30px;
-            box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+            box-shadow: $secondary-shadow;
         }
     }
 }
